--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -341,13 +341,13 @@ folderjoin.secret=Priv\u00E9
 folderjoin.warning.notempty.text=Le r\u00E9pertoire pour la copie local du dossier '{0}' n'est pas vide.\nTous les fichiers contenus seront envoy\u00E9s aux membres concern\u00E9s.\nEtes-vous s\u00FBr d'effectuer le d\u00E9placement d'une copie dans\n'{1}' ?
 folderjoin.warning.notempty.title=Le r\u00E9pertoire racine n'est pas vide
 
-folderleave.description=Quitter ce dossier PowerFolder
-folderleave.dialog.delete=Supprimer les meta-data
-folderleave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
-folderleave.dialog.text=Quitter le dossier PowerFolder {0}?
-folderleave.dialog.title=Quitter le dossier PowerFolder {0}?
-folderleave.key=F
-folderleave.name=Fermer le dossier
+folder_leave.description=Quitter ce dossier PowerFolder
+folder_leave.dialog.delete=Supprimer les meta-data
+folder_leave.dialog.sync_warning=Le dossier est actuellement en synchronisation\!
+folder_leave.dialog.text=Quitter le dossier PowerFolder {0}?
+folder_leave.dialog.title=Quitter le dossier PowerFolder {0}?
+folder_leave.key=F
+folder_leave.name=Fermer le dossier
 
 foldermove.progress.text=D\u00E9placement du dossier '{0}'
 foldermove.progress.title=D\u00E9placement de dossier
@@ -455,7 +455,7 @@ general.description=Description
 general.directory=Dossier
 general.disconnected=D\u00E9connect\u00E9(e)
 general.downloads=T\u00E9l\u00E9chargements
-general.estimatedsize=Taille estim\u00E9e
+general.estimated_size=Taille estim\u00E9e
 general.file=Fichier
 general.files=Fichiers
 general.folder=Dossier(s) partag\u00E9(s)
@@ -502,7 +502,7 @@ general.uploads=Emission
 general.user=Utilisateur
 general.webservice=Sauvegarde en ligne
 general.wednesday=Mercredi
-general.whatisthis=Qu'est-ce que ceci ?
+general.what_is_this=Qu'est-ce que ceci ?
 general.yesterday=Hier
 
 hideoffline.description=Les utilisateurs hors connexion seront retir\u00E9s des r\u00E9sultats
@@ -829,8 +829,6 @@ quickinfo.myfolders.insyncall=Tous les dossiers sont synchronis\u00E9s
 quickinfo.myfolders.syncing=Synchronisation {0}
 quickinfo.myfolders.title=Statut de Mon PowerFolder
 quickinfo.previewfolders.folders={0} dans {1} dossier(s)
-quickinfo.previewfolders.insyncall=Tous les dossiers sont synchronis\u00E9s
-quickinfo.previewfolders.syncing=Synchronisation en cours {0}
 quickinfo.previewfolders.title=Statut des dossiers pr\u00E9visualis\u00E9s
 quickinfo.recylcebin.files={0} fichier(s) dans la poubelle PowerFolder
 quickinfo.recylcebin.title=Poubelle PowerFolder
