--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -502,7 +502,7 @@ general.uploads=Uploads
 general.user=Utente
 general.webservice=Memorizzazione Online
 general.wednesday=Mercoled\u00EC
-general.whatisthis=Cos'\u00E8 questo?
+general.what_is_this=Cos'\u00E8 questo?
 general.yesterday=ieri
 
 hideoffline.description=Gli utenti offline saranno filtrati dal risultato di questa ricerca
