--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -341,13 +341,13 @@ folderjoin.secret=\u79c1\u6709
 folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u672c\u7684\u76ee\u5f55\u975e\u7a7a\u3002\n\u6587\u4ef6\u5939\u4e0b\u7684\u6587\u4ef6\u5c06\u88ab\u4e0a\u4f20\u7ed9\u5176\u4ed6\u6210\u5458\u3002\n\u4f60\u786e\u5b9a\u8981\u628a\u6587\u4ef6\u5939\u7684\u672c\u5730\u526f\u672c\u653e\u5728\n'{1}' ?
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
 
-folderleave.description=\u79bb\u5f00\u8fd9\u4e2aPowerFolder
-folderleave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
-folderleave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
-folderleave.dialog.text=\u79bb\u5f00PowerFolder {0}?
-folderleave.dialog.title=\u79bb\u5f00PowerFolder {0}?
-folderleave.key=L
-folderleave.name=\u79bb\u5f00\u6587\u4ef6\u5939
+folder_leave.description=\u79bb\u5f00\u8fd9\u4e2aPowerFolder
+folder_leave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
+folder_leave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
+folder_leave.dialog.text=\u79bb\u5f00PowerFolder {0}?
+folder_leave.dialog.title=\u79bb\u5f00PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=\u79bb\u5f00\u6587\u4ef6\u5939
 
 foldermove.progress.text=\u6b63\u5728\u79fb\u52a8\u6587\u4ef6\u5939 '{0}'
 foldermove.progress.title=\u79fb\u52a8\u6587\u4ef6\u5939
@@ -455,7 +455,7 @@ general.description=\u63cf\u8ff0
 general.directory=\u6587\u4ef6\u5939
 general.disconnected=\u65ad\u5f00\u8fde\u63a5
 general.downloads=\u4e0b\u8f7d
-general.estimatedsize=\u4f30\u8ba1\u5927\u5c0f
+general.estimated_size=\u4f30\u8ba1\u5927\u5c0f
 general.file=\u6587\u4ef6
 general.files=\u6587\u4ef6
 general.folder=\u6587\u4ef6\u5939
@@ -502,7 +502,7 @@ general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.webservice=\u5728\u7ebf\u5b58\u50a8
 general.wednesday=\u661f\u671f\u4e09
-general.whatisthis=\u8fd9\u662f\u4ec0\u4e48\uff1f
+general.what_is_this=\u8fd9\u662f\u4ec0\u4e48\uff1f
 general.yesterday=\u6628\u5929
 
 hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
@@ -829,8 +829,6 @@ quickinfo.myfolders.insyncall=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.myfolders.syncing=\u6b63\u5728\u540c\u6b65 {0}
 quickinfo.myfolders.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
 quickinfo.previewfolders.folders={0} / {1} \u4e2a\u6587\u4ef6\u5939
-quickinfo.previewfolders.insyncall=\u6240\u6709\u6587\u4ef6\u5939\u90fd\u5df2\u7ecf\u540c\u6b65
-quickinfo.previewfolders.syncing=\u540c\u6b65\u4e2d {0}
 quickinfo.previewfolders.title=\u9884\u89c8\u6587\u4ef6\u5939\u7684\u72b6\u6001
 quickinfo.recylcebin.files={0} \u4e2a\u6587\u4ef6
 quickinfo.recylcebin.title=\u56de\u6536\u7ad9
