--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -314,7 +314,7 @@ foldercreate.key=s
 foldercreate.name=Compartir una carpeta
 foldercreate.nameempty.text=El nombre de este PowerFolder no puede quedarse en blanco
 foldercreate.nameempty.title=Nombre obligatorio
-foldercreate.progress.text=Creaando PowerFolder '{0}'
+folder_create.progress.text=Creaando PowerFolder '{0}'
 foldercreate.success=PowerFolder {0} configurado con \u00e9xito, copia local en '{1}'
 
 folderexception.dialog.text=No es posible incorporarse al PowerFolder '{0}'.\nRaz\u00fan\: {1}
@@ -341,13 +341,13 @@ folderjoin.secret=Secreta
 folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta '{0}' no est\u00e1 vac\u00edo.\nTodos los archivos all\u00ed contenidos se enviar\u00e1n a los miembros.\n\u00bfEst\u00e1 seguro de ubicar la copia local en\n'{1}' ?
 folderjoin.warning.notempty.title=La ubicaci\u00f3n local no est\u00e1 vac\u00eda
 
-folderleave.description=Abandonar este PowerFolder
-folderleave.dialog.delete=Borrar meta-data
-folderleave.dialog.sync_warning=La carpeta se esta sincronizando\!
-folderleave.dialog.text=Abandonar PowerFolder {0}?
-folderleave.dialog.title=Abandonar PowerFolder {0}?
-folderleave.key=A
-folderleave.name=Abandonar carpeta
+folder_leave.description=Abandonar este PowerFolder
+folder_leave.dialog.delete=Borrar meta-data
+folder_leave.dialog.sync_warning=La carpeta se esta sincronizando\!
+folder_leave.dialog.text=Abandonar PowerFolder {0}?
+folder_leave.dialog.title=Abandonar PowerFolder {0}?
+folder_leave.key=A
+folder_leave.name=Abandonar carpeta
 
 foldermove.progress.text=Moviendo carpeta '{0}'
 foldermove.progress.title=Carpeta en movimiento
@@ -455,7 +455,7 @@ general.description=Descripci\u00f3n
 general.directory=Director
 general.disconnected=Desconectado
 general.downloads=Descargas
-general.estimatedsize=Tama\u00f1o estimado
+general.estimated_size=Tama\u00f1o estimado
 general.file=Archivo
 general.files=Archivos
 general.folder=Carpeta
@@ -469,7 +469,7 @@ general.help=ayuda
 general.hide=ocultar
 general.hours=Hora(s)
 general.inet=i-net
-general.localcopyat=Copia local en
+general.local_copy_at=Copia local en
 general.localcopyplace=Elija un lugar para la copia local
 general.localized_date_format=MMMM dd. yyyy (M\:M\u00e9s d\:d\u00eda y\:a\u00f1o)
 general.localnet=red local
@@ -502,7 +502,7 @@ general.uploads=Env\u00edos
 general.user=Usuario
 general.webservice=Almacenamiento en linea
 general.wednesday=Mi\u00e9rcoles
-general.whatisthis=Que es esto?
+general.what_is_this=Que es esto?
 general.yesterday=ayer
 
 hideoffline.description=Los usuarios offline ser\u00e1n filtrados de esta b\u00fasqueda
@@ -829,8 +829,6 @@ quickinfo.myfolders.insyncall=Todas las carpetas est\u00e1n sincronizadas
 quickinfo.myfolders.syncing=Sincronizando {0}
 quickinfo.myfolders.title=Estado de mis PowerFolders
 quickinfo.previewfolders.folders={0} en {1} Carpeta(s)
-quickinfo.previewfolders.insyncall=Todas las carpetas han sido sincronizadas
-quickinfo.previewfolders.syncing=Syncronizando {0}
 quickinfo.previewfolders.title=Estado de carpetas de previsualizaci\u00f3n
 quickinfo.recylcebin.files={0} archivo(s) en la Papelera de Reciclaje
 quickinfo.recylcebin.title=Papelera de Reciclaje
@@ -920,13 +918,13 @@ sendinvitation.ask_emailaddres.title=Direcci\u00f3n de Email
 sendinvitation.body=Saludos {0},<br><br>{1} te invita a PowerFolder '{2}'<br>Esta invitaci\u00f3n te permitir\u00e1 accessar una carpeta privada servida por  {1}.<br><br>1) Para ser accessada necesitas primero descarga e instalar el <br>software gratuito, PowerFolder. Lo encontraras en\:<br>http\://www.powerfolder.com.<br><br>2) Despues de haberlo instalado hazle un click-doble a la invitaci\u00f3n<br>El archivo atado a este correo<br><br>Para mas informaci\u00f3n o asistancia en la instalaci\u00f3n o uso de  PowerFolder favor de<br>visitar nuestra documentaci\u00f3n en  http\://docs.powerfolder.com<br><br>Thank You,<br>El Equipo de desarrollo de PowerFolder<br>PowerFolder, Programa para Compartir Carpetas Profesional<br>.m
 sendinvitation.description=Invita un usuario a una carpeta
 sendinvitation.email=Por email...
-sendinvitation.example_emailaddress=email@dominio.com
+send_invitation.example_email_address=email@dominio.com
 sendinvitation.folder.text=Enviar invitaci\u00f3n a
 sendinvitation.folder.title=Enviar invitaci\u00f3n
 sendinvitation.key=i
-sendinvitation.multi_users=Multiple selecci\u00f3n de usuarios
+send_invitation.multi_users=Multiple selecci\u00f3n de usuarios
 sendinvitation.name=Enviar invitaci\u00f3n
-sendinvitation.no_users=Ning\u00fan usuario ha sido seleccionado
+send_invitation.no_users=Ning\u00fan usuario ha sido seleccionado
 sendinvitation.placetostore=Elija un lugar donde guardar la invitaci\u00f3n
 sendinvitation.subject=Invitaci\u00f3n al PowerFolder '{0}'
 sendinvitation.toclipboard=Al portapapeles...
@@ -1098,18 +1096,18 @@ wizard.project_panel.select=Favor de seleccionar una carpeta para proyectos.
 wizard.projectname.choose=Elija el nombre del proyecto
 wizard.projectname.entername=Teclee el nombre de su proyecto
 wizard.projectname.title=Abrir invitaci\u00f3n
-wizard.sendinvitations.invitationtext=Enter a message for the receiver
-wizard.sendinvitations.invitationtextsample=Texto ejemplo de invitaci\u00f3n
-wizard.sendinvitations.join=Archivos de invitaci\u00f3n son necesarios para unirse a un folder.
-wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
+wizard.send_invitations.invitation_text=Enter a message for the receiver
+wizard.send_invitations.invitation_text_sample=Texto ejemplo de invitaci\u00f3n
+wizard.send_invitations.join=Archivos de invitaci\u00f3n son necesarios para unirse a un folder.
+wizard.send_invitations.never_untrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
 wizard.sendinvitations.offline=No conectado
-wizard.sendinvitations.overpf=Via PowerFolder ahora
-wizard.sendinvitations.savetofile=Guardar como archivo
-wizard.sendinvitations.sendbymail=Enviar por mail
-wizard.sendinvitations.sendinvitation=Enviar invitaci\u00f3n
+wizard.send_invitations.over_powerfolder=Via PowerFolder ahora
+wizard.send_invitations.save_to_file=Guardar como archivo
+wizard.send_invitations.send_by_mail=Enviar por mail
+wizard.send_invitations.send_invitation=Enviar invitaci\u00f3n
 wizard.sendinvitations.sendsuccess=Invitaci\u00f3n enviada
 wizard.sendinvitations.sendsuccessinfo=La invitaci\u00f3n se envi\u00f3 con exito.
-wizard.sendinvitations.title=Guardar invitaci\u00f3n
+wizard.send_invitations.title=Guardar invitaci\u00f3n
 wizard.setupdns.dyndnshomepage=P\u00e1gina web Dyndns
 wizard.setupdns.enterdns=Teclee su dns (din\u00e1mica)
 wizard.setupdns.improvesread=Esto mejora su localizaci\u00f3n en la red. Aunque no es necesario
