--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -314,7 +314,7 @@ foldercreate.key=S
 foldercreate.name=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0(S)
 foldercreate.nameempty.text=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u540d\u524d\u3092\u7a7a\u6b04\u306b\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093
 foldercreate.nameempty.title=\u540d\u524d\u304c\u5fc5\u8981
-foldercreate.progress.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u4f5c\u6210\u4e2d 
+folder_create.progress.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u4f5c\u6210\u4e2d 
 foldercreate.success={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u6210\u529f\u3002\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u5148 '{1}'
 
 folderexception.dialog.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u4e0d\u53ef\u3002\n\u7406\u7531\: {1}
@@ -341,13 +341,13 @@ folderjoin.secret=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
 folderjoin.warning.notempty.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u304c\u3042\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306f\u7a7a\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\n\u305d\u306e\u5834\u6240\u306e\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3059\u3002\n\u672c\u5f53\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u3092\u4ee5\u4e0b\u306e\u5834\u6240\u306b\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f\n'{1}'
 folderjoin.warning.notempty.title=\u7a7a\u3067\u306f\u306a\u3044\u30ed\u30fc\u30ab\u30eb\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 
-folderleave.description=\u3053\u306e\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f
-folderleave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
-folderleave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
-folderleave.dialog.text={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
-folderleave.dialog.title={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
-folderleave.key=L
-folderleave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
+folder_leave.description=\u3053\u306e\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f
+folder_leave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
+folder_leave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
+folder_leave.dialog.text={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
+folder_leave.dialog.title={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
+folder_leave.key=L
+folder_leave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
 foldermove.progress.text='{0}' \u30d5\u30a9\u30eb\u30c0\u79fb\u52d5\u4e2d
 foldermove.progress.title=\u30d5\u30a9\u30eb\u30c0\u79fb\u52d5
@@ -455,7 +455,7 @@ general.description=\u8aac\u660e
 general.directory=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
 general.disconnected=\u672a\u63a5\u7d9a
 general.downloads=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 
-general.estimatedsize=\u6982\u7b97\u30b5\u30a4\u30ba
+general.estimated_size=\u6982\u7b97\u30b5\u30a4\u30ba
 general.file=\u30d5\u30a1\u30a4\u30eb
 general.files=\u30d5\u30a1\u30a4\u30eb
 general.folder=\u30d5\u30a9\u30eb\u30c0
@@ -469,7 +469,7 @@ general.help=\u30d8\u30eb\u30d7
 general.hide=\u96a0\u3059
 general.hours=\u6642\u9593
 general.inet=i-net
-general.localcopyat=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
+general.local_copy_at=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
 general.localcopyplace=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240\u306e\u9078\u629e
 general.localized_date_format=yyyy MMMM dd.
 general.localnet=\u30ed\u30fc\u30ab\u30eb
@@ -502,7 +502,7 @@ general.uploads=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 general.user=\u30e6\u30fc\u30b6\u30fc
 general.webservice=\u30aa\u30f3\u30e9\u30a4\u30f3 \u30b9\u30c8\u30ec\u30fc\u30b8
 general.wednesday=\u6c34\u66dc\u65e5
-general.whatisthis=\u8a73\u7d30\u306a\u8aac\u660e
+general.what_is_this=\u8a73\u7d30\u306a\u8aac\u660e
 general.yesterday=\u6628\u65e5
 
 hideoffline.description=\u3053\u306e\u691c\u7d22\u7d50\u679c\u304b\u3089\u30aa\u30d5\u30e9\u30a4\u30f3\u30e6\u30fc\u30b6\u30fc\u3092\u9664\u5916\u3057\u3066\u975e\u8868\u793a 
@@ -829,8 +829,6 @@ quickinfo.myfolders.insyncall=\u5168\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u
 quickinfo.myfolders.syncing={0} \u540c\u671f\u4e2d
 quickinfo.myfolders.title=\u30de\u30a4 \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u72b6\u614b
 quickinfo.previewfolders.folders={1} \u30d5\u30a9\u30eb\u30c0\u306b {0} 
-quickinfo.previewfolders.insyncall=\u5168\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
-quickinfo.previewfolders.syncing={0} \u540c\u671f\u4e2d
 quickinfo.previewfolders.title=\u30d7\u30ec\u30d3\u30e5\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u72b6\u614b
 quickinfo.recylcebin.files=\u3054\u307f\u7bb1\u5185\u306e\u30d5\u30a1\u30a4\u30eb {0}
 quickinfo.recylcebin.title=\u3054\u307f\u7bb1
@@ -920,13 +918,13 @@ sendinvitation.ask_emailaddres.title=\u96fb\u5b50\u30e1\u30fc\u30eb \u30a2\u30c9
 sendinvitation.body=\u3053\u3093\u306b\u3061\u306f {0} \u3055\u3093\u3002<br><br>{1} \u3055\u3093\u304c PowerFolder \u306e '{2}' \u30d5\u30a9\u30eb\u30c0\u306b\u3042\u306a\u305f\u3092\u62db\u5f85\u3057\u307e\u3059\u3002<br>\u3053\u306e\u62db\u5f85\u72b6\u306f\u3001{1} \u3055\u3093\u304c\u30db\u30b9\u30c8\u3057\u3066\u3044\u308b\u30d7\u30e9\u30a4\u30d9\u30fc\u30c8\u30d5\u30a9\u30eb\u30c0\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002<br><br>1) \u5171\u6709\u30d5\u30a1\u30a4\u30eb\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u306b\u306f\u3001\u307e\u305a http\://www.powerfolder.com \u304b\u3089\u7121\u6599\u30bd\u30d5\u30c8\u30a6\u30a7\u30a2<br>PowerFolder \u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br>2) PowerFolder \u3092\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u305f\u5f8c\u3001\u30e1\u30fc\u30eb\u306b\u6dfb\u4ed8\u3055\u308c\u3066\u3044\u308b\u62db\u5f85\u72b6(.invitation)\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br>PowerFolder \u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3084\u4f7f\u3044\u65b9\u3001\u305d\u306e\u4ed6\u8a73\u7d30\u306b\u3064\u3044\u3066\u306f\u3001<br>\u79c1\u3069\u3082\u306e\u30b5\u30a4\u30c8 http\://docs.powerfolder.com \u3067\u63b2\u8f09\u3057\u3066\u3044\u308b\u8aac\u660e\u6587\u66f8\u3092\u3054\u89a7\u304f\u3060\u3055\u3044\u3002<br><br>\u3088\u308d\u3057\u304f\u304a\u9858\u3044\u3044\u305f\u3057\u307e\u3059\u3002<br>PowerFolder \u958b\u767a\u30c1\u30fc\u30e0<br>PowerFolder \u30d7\u30ed\u30d5\u30a7\u30c3\u30b7\u30e7\u30ca\u30eb\u30fb\u30d5\u30a9\u30eb\u30c0\u5171\u6709\u30c4\u30fc\u30eb<br>
 sendinvitation.description=\u30e6\u30fc\u30b6\u30fc\u3092\u30d5\u30a9\u30eb\u30c0\u306b\u62db\u5f85
 sendinvitation.email=\u96fb\u5b50\u30e1\u30fc\u30eb\u3078...
-sendinvitation.example_emailaddress=email@domain.com
+send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=\u62db\u5f85\u72b6\u9001\u4ed8\u5148\uff1a
 sendinvitation.folder.title=\u62db\u5f85\u72b6\u306e\u9001\u4ed8
 sendinvitation.key=I
-sendinvitation.multi_users=\u8907\u6570\u9078\u629e\u30e6\u30fc\u30b6\u30fc
+send_invitation.multi_users=\u8907\u6570\u9078\u629e\u30e6\u30fc\u30b6\u30fc
 sendinvitation.name=\u62db\u5f85\u72b6\u306e\u9001\u4ed8(I)
-sendinvitation.no_users=\u9078\u629e\u30e6\u30fc\u30b6\u30fc\u306a\u3057
+send_invitation.no_users=\u9078\u629e\u30e6\u30fc\u30b6\u30fc\u306a\u3057
 sendinvitation.placetostore=\u62db\u5f85\u72b6\u3092\u4fdd\u5b58\u3059\u308b\u5834\u6240\u306e\u9078\u629e
 sendinvitation.subject=PowerFolder \u306e '{0}' \u30d5\u30a9\u30eb\u30c0\u3078\u306e\u62db\u5f85
 sendinvitation.toclipboard=\u30af\u30ea\u30c3\u30d7\u30dc\u30fc\u30c9\u3078...
@@ -1098,18 +1096,18 @@ wizard.project_panel.select=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30c7\u30
 wizard.projectname.choose=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078\u629e
 wizard.projectname.entername=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540d\u524d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.projectname.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078\u629e
-wizard.sendinvitations.invitationtext=\u53d7\u3051\u53d6\u308a\u4eba\u3078\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u5165\u529b
+wizard.send_invitations.invitation_text=\u53d7\u3051\u53d6\u308a\u4eba\u3078\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u5165\u529b
 ##wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u306b\u5fc5\u8981\u3067\u3059\u3002
-wizard.sendinvitations.neveruntrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
+wizard.send_invitations.join=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u306b\u5fc5\u8981\u3067\u3059\u3002
+wizard.send_invitations.never_untrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
 wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
-wizard.sendinvitations.overpf=PowerFolder \u3092\u901a\u3058\u3066\u76f4\u3061\u306b
-wizard.sendinvitations.savetofile=\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58
-wizard.sendinvitations.sendbymail=\u30e1\u30fc\u30eb\u3067\u9001\u308b
-wizard.sendinvitations.sendinvitation=\u62db\u5f85\u72b6\u306e\u9001\u4ed8
+wizard.send_invitations.over_powerfolder=PowerFolder \u3092\u901a\u3058\u3066\u76f4\u3061\u306b
+wizard.send_invitations.save_to_file=\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58
+wizard.send_invitations.send_by_mail=\u30e1\u30fc\u30eb\u3067\u9001\u308b
+wizard.send_invitations.send_invitation=\u62db\u5f85\u72b6\u306e\u9001\u4ed8
 wizard.sendinvitations.sendsuccess=\u62db\u5f85\u72b6\u306e\u9001\u4ed8\u5b8c\u4e86
 wizard.sendinvitations.sendsuccessinfo=\u62db\u5f85\u72b6\u306e\u9001\u4ed8\u306b\u6210\u529f\u3057\u307e\u3057\u305f\u3002
-wizard.sendinvitations.title=\u62db\u5f85\u72b6\u306e\u4fdd\u5b58
+wizard.send_invitations.title=\u62db\u5f85\u72b6\u306e\u4fdd\u5b58
 wizard.setupdns.dyndnshomepage=DynDns \u30db\u30fc\u30e0\u30da\u30fc\u30b8
 wizard.setupdns.enterdns=\u3042\u306a\u305f\u306e\uff08\u52d5\u7684\uff09DNS \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 wizard.setupdns.improvesread=\u5fc5\u9808\u5165\u529b\u9805\u76ee\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u304c\u3001\u5916\u90e8\u304b\u3089\u306e\u53c2\u7167\u6027\u304c\u5411\u4e0a\u3057\u307e\u3059\u3002
