Wizard rework and cleanup

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,8 @@
 # http://www.powerfolder.com
 #
 
+quickinfo.folder.preview=Vorschau - Keine Synchronisation
+
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
@@ -76,16 +78,16 @@ addmodifierfriend.name=Freund hinzuf\u00fcgen
 addressEditor.parseerror=<html>Bitte geben Sie die IP-Adressen des LANs ein, G\u00fcltige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=LAN-IP-Bereich
 
-##apps.dir.firefox=Firefox
-##apps.dir.outlook=Outlook
-##apps.dir.thunderbird=Thunderbird
+apps.dir.firefox=Firefox
+apps.dir.outlook=Outlook
+apps.dir.thunderbird=Thunderbird
 
 buypro.description=PowerFolder Pro jetzt kaufen
 buypro.key=K
 buypro.name=Pro kaufen
 
-##change.friend.personal.message.text=You may include a personal message for {0}
-##change.friend.personal.message.title=Add friend message
+change.friend.personal.message.text=Schicken Sie {0} eine persönliche Nachricht
+change.friend.personal.message.title=Nachricht für einen Freund
 
 chat.notification.option1=Antworten
 chat.notification.option2=Schliessen
@@ -132,6 +134,7 @@ deletefile.description=L\u00f6scht die ausgew\u00e4hlten Dateien
 deletefile.key=L
 deletefile.name=Dateien l\u00f6schen
 
+wizard.create_folder.sendinvitation=Anschließend Einladungen versenden 
 ##dialog.addmembertofriendlist.button.add=Add To Friends
 ##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
 ##dialog.addmembertofriendlist.messageTitle=Message from {0}
@@ -168,10 +171,16 @@ dialog.directorychooser.new.name=Neu
 dialog.directorychooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
 dialog.directorychooser.text=Bitte w\u00e4hlen Sie ein Verzeichnis und klicken Sie 'OK'.\nVerzeichnisse k\u00f6nnen mit '+' aufgeklappt werden.
 dialog.directorychooser.title=Verzeichnis ausw\u00e4hlen
+wizard.create_folder.title=Erstelle PowerFolder
+wizard.create_folder.working=Erstelle PowerFolder, bitte warten.
+
+wizard.setup_folder.title=Erweitertes Setup
+wizard.setup_folder.sendinvitation=Anschließend Einladungen versenden.
+
 dialog.fatalerror.title=Schwerer Fehler
 dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
 dialog.newdirectorycreator.title=Neues Verzeichnis
-dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
+dialog.synchronization.choose=Wie möchten Sie jetzt synchronisieren?
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
 dialog.synchronization.send_own_changes=\u00c4nderugen nur ver\u00f6ffentlichen
@@ -331,6 +340,9 @@ folderjoin.invitationtext=Nachricht
 folderjoin.invitortofriend=Zur Freundesliste hinzuf\u00fcgen
 ##folderjoin.join=Join
 ##folderjoin.join.key=J
+general.invitor=Von
+general.message=Nachricht
+general.preview_folder=Vorschau
 folderjoin.key=B
 folderjoin.name=Beitreten
 ##folderjoin.preview=Preview
@@ -971,7 +983,7 @@ syncprofile.backupsource.name=Backup (Quelle)
 syncprofile.backuptarget.name=Backup (Ziel)
 syncprofile.custom.name=Eigene...
 syncprofile.manualdownload.name=Manueller Download
-##syncprofile.no_sync.name=No synchronization
+syncprofile.no_sync.name=Keine Synchronisation
 syncprofile.projectwork.name=Projektarbeit (Manueller Sync)
 syncprofile.syncpcs.name=Spiegeln
 
@@ -1077,10 +1089,10 @@ wizard.control.help=Hilfe
 wizard.control.next=Weiter >
 ##wizard.control.next.description=Go to next wizard step
 wizard.description=Offnet den Assistenten
-wizard.filesharing.sharedsuccess=Sie bieten nun erfolgreich ein neues Folder an\!\nAnderen PowerFolder Benutzern ist Ihr Folder nun zug\u00e4nglich.
-##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
-##wizard.host_panel.pcsjoin=Other computers can join this folder now
-##wizard.host_panel.select=Please select the directory which should be the host
+wizard.filesharing.sharedsuccess=Ein neuer Folder wurde erstellt\!\nSie können nun anderen Benutzern Zugriff geben.
+wizard.host_panel.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\!\n
+wizard.host_panel.pcsjoin=Sie können nun anderen Computern Zugriff geben.  
+wizard.host_panel.select=Welches Verzeichnis soll freigegeben werden?
 wizard.invite.selectlocaldirectory=W\u00e4hlen Sie das lokale Verzeichnis aus
 wizard.key=a
 wizard.loadinvitation.addtofriends={0} der Freundeslisten hizuf\u00fcgen
@@ -1097,7 +1109,7 @@ wizard.projectname.entername=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
 wizard.projectname.title=Einladung \u00f6ffnen
 wizard.send_invitations.invitation_text=Ihre Nachricht an den Empf\u00e4nger
 ##wizard.sendinvitations.invitationtextsample=
-##wizard.sendinvitations.join=Invitation files are required to join a folder.
+wizard.sendinvitations.join=Nur mit einer Einladungsdatei kann einem Folder beigetreten werden.
 wizard.send_invitations.never_untrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
 wizard.send_invitations.over_powerfolder=\u00dcber PowerFolder versenden
@@ -1117,7 +1129,7 @@ wizard.setupsuccess=Setup erfolgreich
 wizard.successjoin=Der Folder wurde auf diesem Computer eingerichtet\!
 wizard.syncpcspanel.foldersyncsuccess=Computer Spiegelung wurde erfolgreich eingerichtet\!\n
 wizard.syncpcspanel.pcsjoin=Ihre Daten werden nun mit den anderen Computer(n) synchronisiert
-wizard.syncpcspanel.select=Bitte w\u00e4hlen Sie das Verzeichnis aus, das gespiegelt werden soll
+wizard.syncpcspanel.select=Bitte w\u00e4hlen Sie das Verzeichnis aus, das gespiegelt werden soll.
 wizard.webservice.enteraccount=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
 wizard.webservice.learnmore=Was ist der PowerFolder Online Speicher?
 wizard.webservice.login=Online Speicher Login
@@ -1127,10 +1139,10 @@ wizard.webservice.password=Passwort
 wizard.webservice.register=Neu registrieren
 wizard.webservice.username=Email
 wizard.whattodo.backup_folder=Verzeichnis sichern
-wizard.whattodo.custom_sync=Verzeichnis synchronisieren (erweitert)
-##wizard.whattodo.hostwork=Host a folder
+wizard.whattodo.custom_sync=Erweitertes Setup
+wizard.whattodo.hostwork=Verzeichnis freigeben
 wizard.whattodo.load_invite=Einladungs-Datei \u00f6ffnen
 wizard.whattodo.mirror_folder=Verzeichnis spiegeln
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
-wizard.whattodo.projectwork=Projekt Synchronisation
+wizard.whattodo.projectwork=Neues Projekt aufsetzen
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
