Now shows LAN ONLY

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+general.lan_only=Nur LAN
 quickinfo.folder.preview=Vorschau - Keine Synchronisation
 
 abortcopy.description=Bricht den Kopiervorgang ab
